Tue Dec 22 15:08:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy.rb, controller.rb, processor.rb, bhere.rb, port.rb,
	  conf.rb: [REQ#186] 対応

Fri Dec 18 00:01:38 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* input-iota.rb: [REQ#185], [BUG#184]対応
	* njob.rb, port.rb: [REQ#183]対応
	* file-place.rb: [BUG#184]対応

Thu Dec 17 19:08:55 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy.rb: [REQ#137]対応. クライアントからabortできるようにした.

Wed Dec 16 20:25:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* mod-group-by.rb, port.rb: [BUG#182]対応
	* processor.rb: SEMIACTIVATEになる条件を変更

Mon Dec 14 23:43:22 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-merge-group_by.rb: ちょっと
	* controller.rb: デバッグメッセージ変更
	* mod-group-by.rb: ModGroupBy2, ModGroupBy3でoption指定できるようにした
	* port.rb: [REQ#181]追加. OnMemorySortedQueue, SortedQeueu1


Fri Dec 11 17:24:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: [BUG#175]対応
	* controller.rb: [BUG#175]対応, [BUG#179]対応, [BUG#180]対応
	* nfile.rb: [BUG#175]対応

Fri Dec 11 15:15:12 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* ntask.rb, njob.rb: [REQ#176]対応
	* port.rb: [BUG#177]対応, [REQ#178]対応
	* fast-tempfile.rb: [REQ#178]対応

Wed Dec  9 22:49:22 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* Makefile: test-cleanタグ追加
	* n-group-by.rb: [BUG#171]対応

Wed Dec  9 21:39:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb, node.rb, controller.rb, processor.rb, njob.rb,
	  log.rb: [REQ#174]対応

Wed Dec  9 18:39:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: ログメッセージ修正
	* controller.rb: [BUG#173]対応

Wed Dec  9 01:26:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* mod-group-by.rb: [REQ#168] ModGroupBy3ちょっと修正

Sat Dec  5 00:04:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* mod-group-by.rb: [REQ#168] ModGroupBy3

Fri Dec  4 14:32:59 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb, conf.rb: [REQ#172]対応
	* b-merge-group_by.rb: ログ出力先を変更