@@ -12,12 +12,6 @@ require "fairy/controller"
 
 $0 = "fairy controller #{ARGV.join(' ')}"
 
-Thread.abort_on_exception = Fairy::CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION
-
-if Fairy::CONF.USE_RESOLV_REPLACE
-  require "resolv-replace"
-end
-
 module Fairy
   class ControllerAPP<BaseAPP
     def initialize
