@@ -14,7 +14,7 @@ module Fairy
 
 ##CONF.MASTER_HOST = #NO SYSTEM DEFAULT VALUE
   CONF.MASTER_HOST = "emperor2"
-  CONF["emperor2v1"].MASTER_HOST = "emperor2v1"
+  CONF["emperor2v1"].MASTER_HOST = "emperor2"
 #  CONF.MASTER_HOST = "giant"
 ##CONF.MASTER_PORT = "19999"
 
@@ -126,6 +126,7 @@ CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 ##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
 ##  CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
+##CONF.SOCK_DO_NOT_REVERSE_LOOKUP = true
 ##CONF.USE_RESOLV_REPLACE = false
 
 ##CONF.BLOCK_USE_STDOUT = true
