@@ -1,5 +1,6 @@
 # encoding: UTF-8
 
+require "socket"
 require "rbconfig"
 
 module Fairy
@@ -139,6 +140,7 @@ module Fairy
     def_prop :PROCESSOR_MON_PSFORMAT
     def_prop :PROCESSOR_MON_OBJECTSPACE_INSPECT_ON
 
+    def_prop :SOCK_DO_NOT_REVERSE_LOOKUP
     def_prop :USE_RESOLV_REPLACE
     
     def_prop :BLOCK_USE_STDOUT
@@ -299,6 +301,7 @@ module Fairy
   DEFAULT_CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
   DEFAULT_CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
+  DEFAULT_CONF.SOCK_DO_NOT_REVERSE_LOOKUP = true
   DEFAULT_CONF.USE_RESOLV_REPLACE = false
 
   DEFAULT_CONF.BLOCK_USE_STDOUT = true
@@ -326,4 +329,14 @@ module Fairy
   end
   module_function :REPLACE_CONF
 
+  
+  def Conf.configure_common_conf
+    Thread.abort_on_exception = Fairy::CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION
+
+    TCPSocket.do_not_reverse_lookup = Fairy::CONF.SOCK_DO_NOT_REVERSE_LOOKUP
+
+    if Fairy::CONF.USE_RESOLV_REPLACE
+      require "resolv-replace"
+    end
+  end
 end
